@@ -255,7 +255,14 @@ namespace SimpleInjector
 
             if (disposables != null)
             {
-                disposables.ForEach(disposable => disposable.Dispose());
+                // Dispose all instances in the opposite order in which they are created. This prevents
+                // prevents ObjectDisposedExceptions from being thrown when dependent services are called
+                // from within the Dispoe method.
+                for (int index = disposables.Count - 1; index >= 0; index--)
+                {
+                    disposables[index].Dispose();
+                }
+
                 context.Items[ObjectsToDisposeKey] = null;
             }
         }
