@@ -34,6 +34,11 @@
         /// Adds the <paramref name="disposable"/> to the list of items that will get disposed when the
         /// scope ends.
         /// </summary>
+        /// <remarks>
+        /// Note to implementers: Instances registered for disposal will have to be disposed in the opposite
+        /// order of registration, since disposable components might still need to call disposable dependencies
+        /// in their Dispose() method.
+        /// </remarks>
         /// <param name="container">The <see cref="Container"/> instance.</param>
         /// <param name="disposable">The instance that should be disposed when the scope ends.</param>
         /// <exception cref="ArgumentNullException">Thrown when one of the arguments is a null reference
