@@ -28,7 +28,8 @@ Version vNext
 		 an unregistered controller can't be created (for whatever reason) instead of allowing null to be
 		 returned, since this causes MVC to throw a non-descriptive "Make sure that the controller has a 
 		 parameterless public constructor" exception, hiding the real cause. (work item 20097).
-
+		-[Core/LifetimeScoping/Web/Wcf] Instances were disposed in wrong order. (work item 20100)
+		
 
 Version 2.3.1 (v2.3.1 RTM)  2013-07-12
 
